@@ -40,9 +40,13 @@
 #include <stdarg.h>
 #include <sys/wait.h>
 #include <sys/types.h>      /* pid_t */
+#if defined(USE_NCURSES) && !defined(RENAMED_NCURSES)
+#include <ncurses.h>
+#else
 #include <curses.h>
+#endif
 
-static char const rcsid[] = "$Id: exec.c,v 1.1 2000/04/27 16:33:47 petr Exp $";
+static char const rcsid[] = "$Id: exec.c,v 1.2 2000/05/03 22:02:10 petr Exp $";
 
 static	RETSIGTYPE	(*oldsigquit)();	/* old value of quit signal */
 static	RETSIGTYPE	(*oldsighup)();		/* old value of hangup signal */
